# test_rinha

./: config.json  main.py  pyproject.toml  readme.md  schema.py
worker/: consumer.py
