[tool.poetry]
name = "test-rinha"
version = "0.1.0"
description = ""
authors = ["Fellipe Pinheiro <fellipe.pinheiro@tooseguros.com.br>"]
readme = "README.md"
packages = [{include = "test_rinha"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
